--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <h1>Hello world
   </h1>
   <p> HI Hello Guys...............</p>
+  <script>
+    const num1 = 5;
+const num2 = 3;
+
+// add two numbers
+const sum = num1 + num2;
+
+// display the sum
+console.log('The sum of ' + num1 + ' and ' + num2 + ' is: ' + sum);
+    </script>
   
 </body>
 </html>
